--- a/survey_analytics.ipynb
+++ b/survey_analytics.ipynb
@@ -576,56 +576,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Impact from Future Intentions to System Efficiency: Coefficient = 1.075 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usability to System Satisfaction: Coefficient = 0.929 (Strong, positive), p-value = 0.0000\n",
-      "Impact from Future Intentions to System Satisfaction: Coefficient = 0.911 (Strong, positive), p-value = 0.0000\n",
-      "Impact from Future Intentions to System Usefulness: Coefficient = 0.909 (Strong, positive), p-value = 0.0000\n",
-      "Impact from Future Intentions to System Usability: Coefficient = 0.853 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usefulness to System Efficiency: Coefficient = 0.837 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usability to System Efficiency: Coefficient = 0.824 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usability to Future Intentions: Coefficient = 0.774 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usability to System Usefulness: Coefficient = 0.762 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Satisfaction to System Efficiency: Coefficient = 0.707 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Satisfaction to System Usefulness: Coefficient = 0.665 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usefulness to System Satisfaction: Coefficient = 0.618 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Satisfaction to Future Intentions: Coefficient = 0.588 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usefulness to Future Intentions: Coefficient = 0.545 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Usefulness to System Usability: Coefficient = 0.504 (Strong, positive), p-value = 0.0000\n",
-      "Impact from System Efficiency to System Usefulness: Coefficient = 0.479 (Moderate, positive), p-value = 0.0000\n",
-      "Impact from System Efficiency to System Satisfaction: Coefficient = 0.375 (Moderate, positive), p-value = 0.0000\n",
-      "Impact from System Efficiency to Future Intentions: Coefficient = 0.369 (Moderate, positive), p-value = 0.0000\n",
-      "Impact from System Issues to System Efficiency: Coefficient = 0.283 (Weak, positive), p-value = 0.0021\n",
-      "Impact from System Satisfaction to System Issues: Coefficient = 0.227 (Weak, positive), p-value = 0.0266\n",
-      "Impact from System Issues to System Satisfaction: Coefficient = 0.150 (Weak, positive), p-value = 0.0266\n",
-      "Impact from System Issues to System Usefulness: Coefficient = 0.147 (Weak, positive), p-value = 0.0363\n",
-      "Impact from System Issues to Future Intentions: Coefficient = 0.067 (Weak, positive), p-value = 0.2244\n",
-      "Impact from System Issues to System Usability: Coefficient = 0.021 (Weak, positive), p-value = 0.7127\n"
+      "System Satisfaction: Mean = 3.42, t-stat = 6.45, p-value = 0.000, Result = Fail to Reject H0\n",
+      "System Usability: Mean = 3.35, t-stat = 6.42, p-value = 0.000, Result = Fail to Reject H0\n",
+      "System Efficiency: Mean = 3.38, t-stat = 4.18, p-value = 0.000, Result = Fail to Reject H0\n",
+      "System Issues: Mean = 2.93, t-stat = -0.81, p-value = 0.418, Result = Fail to Reject H0\n",
+      "System Usefulness: Mean = 3.73, t-stat = 10.71, p-value = 0.000, Result = Fail to Reject H0\n",
+      "Future Intentions: Mean = 3.58, t-stat = 11.07, p-value = 0.000, Result = Fail to Reject H0\n"
      ]
     }
    ],
    "source": [
-    "# Assuming 'impact_results' is already populated from previous regression analyses\n",
-    "for predictor, outcome, coeff, p_value in impact_results:\n",
-    "    # Determine the impact level based on the coefficient magnitude\n",
-    "    if abs(coeff) >= 0.5:\n",
-    "        impact_level = \"Strong\"\n",
-    "    elif abs(coeff) >= 0.3:\n",
-    "        impact_level = \"Moderate\"\n",
-    "    else:\n",
-    "        impact_level = \"Weak\"\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
     "\n",
-    "    # Determine the direction of impact\n",
-    "    direction = \"positive\" if coeff > 0 else \"negative\"\n",
+    "def test_ui_ux_sufficiency(data, categories, threshold=3):\n",
+    "    results = {}\n",
+    "    for category, cols in categories.items():\n",
+    "        # Calculate the mean score for each category\n",
+    "        category_mean = data[cols].mean(axis=1).mean()\n",
+    "        \n",
+    "        # Perform a one-sample t-test against the neutral threshold\n",
+    "        t_stat, p_value = stats.ttest_1samp(data[cols].dropna().mean(axis=1), threshold)\n",
+    "        \n",
+    "        # Determine whether to reject the null hypothesis\n",
+    "        results[category] = {\n",
+    "            'Mean Score': category_mean,\n",
+    "            't-statistic': t_stat,\n",
+    "            'p-value': p_value,\n",
+    "            'Result': \"Reject H0\" if p_value < 0.05 and category_mean < threshold else \"Fail to Reject H0\"\n",
+    "        }\n",
+    "    return results\n",
     "\n",
-    "    # Reporting\n",
-    "    print(f\"Impact from {predictor} to {outcome}: Coefficient = {coeff:.3f} ({impact_level}, {direction}), p-value = {p_value:.4f}\")\n"
+    "# Example usage with hypothetical data and categories\n",
+    "categories = {\n",
+    "    \"System Satisfaction\": system_satisfaction_columns,\n",
+    "    \"System Usability\": system_usability_columns,\n",
+    "    \"System Efficiency\": system_efficiency_improvement_columns,\n",
+    "    \"System Issues\": system_issues_columns,\n",
+    "    \"System Usefulness\": system_usefulness_columns,\n",
+    "    \"Future Intentions\": future_intentions_visual_appeal_columns\n",
+    "}\n",
+    "\n",
+    "# Assuming data is loaded and ready\n",
+    "results = test_ui_ux_sufficiency(data, categories)\n",
+    "for category, result in results.items():\n",
+    "    print(f\"{category}: Mean = {result['Mean Score']:.2f}, t-stat = {result['t-statistic']:.2f}, p-value = {result['p-value']:.3f}, Result = {result['Result']}\")\n"
    ]
   },
   {
